gitops/backend-deployment-v2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: loyalty-v2
  labels:
    app: loyalty
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty
      version: v2
  template:
    metadata:
      labels:
        app: loyalty
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: loyalty-v2
          image: >-
            image-registry.openshift-image-registry.svc:5000/dev/backend-v2
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
