gitops/front-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: front-app
  labels:
    app: front-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front-app
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: front-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/dev/front-app
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
