gitops/loyalty-dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: loyalty-dr
spec:
  host: loyalty
  subsets:
    - labels:
        version: v1
      name: v1
